# pinpanda

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postman_sample.json  sample.ts  syntax.toml  tailwind.config.js  turbo.json  vite.config.ts
.github/workflows/: demo.yml  manual.yml  publish.yaml  release.yaml
.turbo/daemon/: 66728a90173d5134-turbo.log.2025-01-16
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  package.json  tauri-dev.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/dev/: icon.icns
src-tauri/src/: command.rs  demo.rs  http_runner.rs  lib.rs  main.rs  utils.rs
src-tauri/src/commands/: mod.rs
src-web/: index.html  package.json  tsconfig.json
src-web/public/: openapi-spec.yaml  spec2.yaml
src-web/src/: main.css  main.tsx
src-web/src/components/: env-switcher.tsx  nav_actions.tsx
src-web/src/components/Editor/: Editor.css  index.tsx
src-web/src/components/Editor/lang-toml/: index.ts
src-web/src/components/ResponseViewers/: JsonViewer.tsx
src-web/src/components/Sidebar/: index.tsx  tree.tsx
src-web/src/components/Tabs/: index.tsx
src-web/src/components/ui/: button.tsx  code-comparism.tsx  tree-view-api.tsx
src-web/src/hooks/: use-filetree.tsx
src-web/src/routes/: __root.tsx  index.tsx
src-web/src/routes/scalar/: index.tsx
src/components/: app-sidebar.tsx  env-switcher.tsx  nav_actions.tsx  team-switcher.tsx
src/components/CodeEditor/: CodeEditor.css  index.tsx
src/components/ResponseViewers/: JsonViewer.css
src/components/Sidebar/: index.tsx
src/components/Tabs/: index.tsx
src/components/ui/: sheet.tsx  sidebar.tsx  tab-navigation.tsx  tree-view-api.tsx  tree-view.tsx
src/hooks/: use-filetree.tsx
src/lib/: toml.ts  utils.ts
src/routes/: __root.tsx  index.tsx  root.css
src/routes/scalar/: index.tsx
www/: package.json
www/app/: layout.tsx  page.tsx
www/app/pricing/: page.tsx  pricing-comparator.tsx
www/components/: hero-section.tsx
