[package]
name = "annie"
version = "0.1.0"
description = "A Tauri App"
authors = ["emmanuelajike2000@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "annie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio-util = { version = "0.7.13", features = ["codec"] }
tauri-plugin-opener = "2"
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.0.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = { version = "0.8.19", features = ["default"] }
serde_repr = "0.1.19"
walkdir = "2.5.0"
thiserror = "2.0.11"
anyhow = "1.0.95"
relative-path = "1.9.3"
glob = "0.3.2"
dotenv-parser = "0.1.3"
jsonc-parser = "0.26.2"
notify = "8.0.0"
rustyscript = "0.11.0"


