[package]
name = "panda"
version = "0.1.0"
description = "Awesome http client with best DX featuring filebased collections, git friendly and more to come."
authors = ["emmanuelajike2000@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "panda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio-util = { version = "0.7.13", features = ["codec"] }
tauri-plugin-opener = "2"
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.0.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = { version = "0.8.19", features = ["default"] }
serde_repr = "0.1.19"
walkdir = "2.5.0"
thiserror = "2.0.11"
anyhow = "1.0.95"
relative-path = "1.9.3"
glob = "0.3.2"
dotenv-parser = "0.1.3"
jsonc-parser = "0.26.2"
notify = "8.0.0"
clap = { version = "4.5.31", features = ["derive"] }
clap_derive = "4.5.28"
directories = "6.0.0"
normalize-path = "0.2.1"
uuid = { version = "1.16.0", features = ["v4"] }
fancy-regex = "0.14.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.6.1"


